RewardsPackage/force-app/main/default/objects/Rewards_Program__c/Rewards_Program__c.object-meta.xml
<CustomObject>
    <description>A Rewards Program represents a collection of Rewards and a time frame for participation</description>
    <label>Rewards Program</label>
    <nameField>
        <label>Rewards Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>