RewardsPackage/force-app/main/default/objects/Rewards_Program__c/fields/Days_Until_Points_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Points_Expire__c</fullName>
    <description>Number of days (inclusive) before awarded points related to this Rewards Program expire</description>
    <inlineHelpText>Number of days (inclusive) before awarded points related to this Rewards Program expire</inlineHelpText>
    <label>Days Until Points Expire</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>