RewardsPackage/force-app/main/default/objects/Rewards_Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates whether this Rewards Program has a start and end date or if it is perpetually available</description>
    <inlineHelpText>Indicates whether this Rewards Program has a start and end date or if it is perpetually available</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Duration</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>