RewardsPackage/force-app/main/default/objects/Rewards_Program__c/recordTypes/Limited_Duration.recordType-meta.xml
<RecordType>
    <fullName>Limited_Duration</fullName>
    <active>true</active>
    <description>A Reward Program with a start and end date</description>
    <label>Limited Duration</label>
</RecordType>