RewardsPackage/force-app/main/default/objects/Rewards_Program__c/recordTypes/Perpetual.recordType-meta.xml
<RecordType>
    <fullName>Perpetual</fullName>
    <active>true</active>
    <description>A Rewards Program without a start and end date</description>
    <label>Perpetual</label>
</RecordType>