RewardsPackage/force-app/main/default/objects/Rewards_Program__c/listViews/Limited_Duration_Rewards_Programs.listView-meta.xml
<ListView>
    <fullName>Limited_Duration_Rewards_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Datetime__c</columns>
    <columns>End_Datetime__c</columns>
    <columns>Days_Until_Points_Expire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rewards_Program__c.Limited_Duration</value>
    </filters>
    <label>Limited Duration Rewards Programs</label>
</ListView>