RewardsPackage/force-app/main/default/objects/Rewards_Program__c/listViews/Perpetual_Rewards_Programs.listView-meta.xml
<ListView>
    <fullName>Perpetual_Rewards_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Days_Until_Points_Expire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rewards_Program__c.Perpetual</value>
    </filters>
    <label>Perpetual Rewards Programs</label>
</ListView>